--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deployment from github to AWS
 on:
   push:
     branches:
-      -main
+      - master
 jobs:
   deploy:
     runs-on: ubuntu-latest
