--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,14 +17,14 @@ jobs:
         uses: gerred/actions/current-time@master
         id: current-time
         
-      - name: Run string replace
-        uses: frabert/replace-string-action@master
-        id: format-time
-        with:
-          pattern:'[:\/]+'
-          string:"${{ steps.current-time.outputs.time }}"
-          replace-with:'-'
-          flags:'g'
+#       - name: Run string replace
+#         uses: frabert/replace-string-action@master
+#         id: format-time
+#         with:
+#           pattern:'[:\/]+'
+#           string:"${{ steps.current-time.outputs.time }}"
+#           replace-with:'-'
+#           flags:'g'
           
       - name: Deploy to EB
         uses: k89jy/simple-engineer-aws-delpyment-tutorial@master
@@ -33,6 +33,6 @@ jobs:
           aws_secret_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           application_name: simple-engineer-delpoyment-tutorial
           environment_name: Simpleengineerdelpoymenttutorial-env
-          version_label: "simple-engineer-delpoyment-${{steps.format-time.outputs.replaced}}"
+#           version_label: "simple-engineer-delpoyment-${{steps.format-time.outputs.replaced}}"
           region: ap-northeast-1
           deployment_package: deploy.zip
