--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           
       - name: Deploy to EB
         uses: k89jy/simple-engineer-aws-delpyment-tutorial@master
-        with:
+        env:
           aws_access_key: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws_secret_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           application_name: simple-engineer-delpoyment-tutorial
