--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,3 +36,4 @@ jobs:
 #           version_label: "simple-engineer-delpoyment-${{steps.format-time.outputs.replaced}}"
           region: ap-northeast-1
           deployment_package: deploy.zip
+          eb_package_s3_bucket_name: "elb-node-server"
