--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,6 @@ jobs:
           application_name: simple-engineer-delpoyment-tutorial
           environment_name: Simpleengineerdelpoymenttutorial-env
           region: ap-northeast-1
+          version_label: "my-$"
           deployment_package: deploy.zip
           
